@@ -5,6 +5,7 @@ import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -15,12 +16,17 @@ import java.util.Set;
 public class Day5 {
     static Map<Integer, Set<Integer>> pageOrderingRules = new HashMap<>();
     static List<List<Integer>> updates = new ArrayList<>();
+    static List<List<Integer>> incorrectUpdates = new ArrayList<>();
 
     public static void main(String[] args) throws FileNotFoundException {
         int sum = 0;
         readFile();
         sum += checkUpdates();
         System.out.println(sum);
+
+        int sum2 = 0;
+        sum2 += orderIncorrectUpdates();
+        System.out.println(sum2);
     }
 
     private static void readFile() throws FileNotFoundException {
@@ -35,19 +41,37 @@ public class Day5 {
             List<Integer> ruleValues = Arrays.stream(line.split("\\|"))
                     .map(Integer::parseInt)
                     .toList();
-            if (pageOrderingRules.containsKey(ruleValues.getFirst())) {
-                pageOrderingRules.get(ruleValues.getFirst()).add(ruleValues.get(1));
+            if (pageOrderingRules.containsKey(ruleValues.get(0))) {
+                pageOrderingRules.get(ruleValues.get(0)).add(ruleValues.get(1));
             } else {
-                pageOrderingRules.put(ruleValues.getFirst(), new HashSet<>(Set.of(ruleValues.get(1))));
+                pageOrderingRules.put(ruleValues.get(0), new HashSet<>(Set.of(ruleValues.get(1))));
             }
         }
         while (scanner.hasNextLine()) {
             String line = scanner.nextLine();
-            updates.add(Arrays.stream(line.split(","))
+            updates.add(new ArrayList<>(Arrays.stream(line.split(","))
                     .map(Integer::parseInt)
-                    .toList());
+                    .toList()));
         }
         scanner.close();
+    }
+
+    private static int orderIncorrectUpdates() {
+        int sum = 0;
+        for (List<Integer> incorrectUpdate : incorrectUpdates) {
+            for (int i = 0; i < incorrectUpdate.size(); i++) {
+                while (i > 0 && !checkValue(incorrectUpdate, i)) {
+                    swapValues(i, incorrectUpdate);
+                    i--;
+                }
+            }
+            sum += incorrectUpdate.get(incorrectUpdate.size() / 2);
+        }
+        return sum;
+    }
+
+    private static void swapValues(int i, List<Integer> updateToChange) {
+        Collections.swap(updateToChange, i, i - 1);
     }
 
     private static int checkUpdates() {
@@ -61,6 +85,8 @@ public class Day5 {
             }
             if (correct) {
                 sum += update.get(update.size() / 2);
+            } else {
+                incorrectUpdates.add(update);
             }
         }
         return sum;
